# deeplearning-project-template

./: .gitattributes  .gitignore  README.md  eval.py  predict.py  pyproject.toml  train.py
configs/: config.yaml  eval.yaml  predict.yaml
configs/data/: glue.yaml
configs/model/: bert.yaml  roberta.yaml
configs/training/: base.yaml
data/glue/: train.jsonl  val.jsonl
src/deeplearning_project_template/: config.py  data.py  model.py  trainer.py  utils.py
